New in version 1.1.1 (xxx?? 2009)
 * Fixes DocSpliter fallback to behave when it is misconfigured.
 * Fixes for anaphora resolution; head-word was missing or mis-identified.
 * Fix crash when the distributed parser (remote parser) returns null.

New in version 1.1.0 (2 July 2009)
 * Fix crash when generating scheme frames for opencog.
 * Distinct anaphora histories for distinct conversation streams. 
 * Fix extents calculation in lexical chunker code.
 * Requires new Java interfaces in link-grammar version 4.5.8

New in version 1.0.0 (17 June 2009)
 * Add "ant help" and "ant javadoc" build targets
 * Upgrade to opennlp-1.4.3, maxent-2.5.2
 * Move the old, deprecated parser API to parser-old.
 * Update for link-grammar version 4.5.7
 * Fix _amod, _predadj, _advmod order in the frame rules.
 * Fix lemma form of verb 's ("That's what the man said")
 * Fix handling of word subscripts, when subscripts are multi-letter.
 * Fix OpenCog output for frame elements.
 * Improve POS tagging coverage.
 * Strip the [?], [!] and [~] suffixes from link-grammar-guessed words.
 * Add refined sentence history support for anaphora resolution.
 * Export anaphoric reference output to OpenCog.

New in version 0.99.0 (May 2009)
 * Fix/reverse the usage of the head-word in certain relations.
   Please note that this is a MAJOR INCOMPATIBILITY from previous
	versions! Please note that the frame relations are BROKEN as
	a result of this change; they will be fixed later!

New in version 0.98.4 (March 2009)
 * Fix build break in optional OWL-format output.
 * Delete obsolete interface class RelexInfo.
 * Add getPOS() method to ParsedSentence.
 * Split relex-semantic-algs.txt into two files.
 * Correctly identify time-related adjectives.
 * Fix the way that the version number is identified during build.
 * Tag more pronouns as such.
 * Work around crash when input contains utf8-encoded Japanese/Chinese.
 * Add opencog-server.sh for generating OpenCog output.
