@@ -2,6 +2,7 @@ New in version 1.1.1 (xxx?? 2009)
  * Fixes DocSpliter fallback to behave when it is misconfigured.
  * Fixes for anaphora resolution; head-word was missing or mis-identified.
  * Fix crash when the distributed parser (remote parser) returns null.
+ * Don't print the phrase string in the OpenCog server, it messes the output!
 
 New in version 1.1.0 (2 July 2009)
  * Fix crash when generating scheme frames for opencog.
